--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,42 @@
-.App {
-  text-align: center;
+*{
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.header{
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  height: 4vw;
+  background-color: black;
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.center-text{
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.header-left,.header-right{
+  font-size: 2vw;
+  margin: 0;
+}
+.header-left{
+  width: 20%;
+}
+.header-right{
+  width: 80%;
+}
+.sideNav{
+  width: 20%;
+  background-color: black;
+  color: white;
+  margin: 0%;
+}
+.side-nav-button{
+  padding: 2%;
+  margin: 1%;
+  color:white;
+  border: 0.1vw #e0c677 solid;
+}
+.side-nav-button:hover{
+  color:#BF9515;
+  border: 0.1vw white solid;
 }
